--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -6,5 +6,6 @@
   <p><%= item.subtitle %></p>
   <p><%= item.body %></p>
   <p><%= image_tag item.thumb_image unless item.thumb_image.nil?  %></p>
-  <%= link_to "Edit", edit_portfolio_path(item) %>
+  <p><%= link_to "Edit", edit_portfolio_path(item) %></p>
+  <p><%= link_to 'Delete Portfolio item', portfolio_path(item), method: :delete, data: { confirm: 'Are you sure?' } %></p>
 <% end %> 
