--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -1,11 +1,11 @@
 <h1>Angular Portfolio items</h1>
 
-<%= link_to "Create New Item", new_portfolio_path %>
+<%= link_to "Create New Item", new_portfolio_path if logged_in?(:site_admin) %>
 <% @angular_portfolio_items.each do |item| %>
   <p><%= link_to item.title, portfolio_show_path(item) %></p>
   <p><%= item.subtitle %></p>
   <p><%= item.body %></p>
   <p><%= image_tag item.thumb_image unless item.thumb_image.nil?  %></p>
-  <p><%= link_to "Edit", edit_portfolio_path(item) %></p>
-  <p><%= link_to 'Delete Portfolio item', portfolio_path(item), method: :delete, data: { confirm: 'Are you sure?' } %></p>
+  <p><%= link_to "Edit", edit_portfolio_path(item) if logged_in?(:site_admin) %></p>
+  <p><%= link_to 'Delete Portfolio item', portfolio_path(item), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %></p>
 <% end %> 
