--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> 
+<html>  
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,18 +14,21 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
 
-    <%= render "shared/nav", location: 'top' %>
+          <%= render "shared/application_nav" %>
 
-    <%= login_helper %>
+          <%= login_helper %>
 
-    <%= yield %>
+          <%= yield %>
 
-    <%= copyright_generator %>
-
-    <%= source_helper("application") %>
-
+          <%= copyright_generator %>
+          
+          <%= source_helper("application") %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
