Updated footer, login button on nav bar and button functionality

--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="masthead clearfix">
-  <div class="inner">
+  <div class="inner"> 
     <h3 class="masthead-brand">B.J. Brooks</h3>
     <nav class="nav nav-masthead">
       <%= link_to "Home", root_path, class: 'nav-link' %>
@@ -7,6 +7,7 @@
       <%= link_to "Contact", contact_path, class: 'nav-link' %>
       <%= link_to "Blogs", blogs_path, class: 'nav-link' %>
       <%= link_to "Portfolios", portfolios_path, class: 'nav-link' %>
+      <%= login_helper 'nav-link' %>
     </nav>
   </div>
 </div>
