--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -166,10 +166,15 @@ body {
  */
 
 .card-block {
+  padding-left: 15px;
   color: black;
   text-align: left;
 }
 
 .auth-links a {
   color: black;
+}
+
+.register-text {
+  text-align: right;
 }
