--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -162,11 +162,12 @@ body {
 }
 
 /*
- * Base structure
+ * Custom Styles
  */
 
 .card-block {
   padding-left: 15px;
+  padding-right: 15px;
   color: black;
   text-align: left;
 }
@@ -177,4 +178,10 @@ body {
 
 .register-text {
   text-align: right;
+}
+
+.login > .card {
+  width: 22rem;
+  margin: 0 auto;
+  float: none;
 }
