--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -44,9 +44,9 @@
 
      end of navbar -->
 
-     <%= render 'shared/portfolio_nav' %>
+    <%= render 'shared/portfolio_nav' %>
 
-     <%= render 'shared/portfolio_masthead' %>
+    <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
 
     <%= yield %>
 
