--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,3 +1,37 @@
+
+<%= form_with(model: blog, local: true) do |form| %>
+  <% if blog.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
+
+      <ul>
+      <% blog.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= form.text_field :title, class: 'form-control', placeholder: 'Title' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.text_area :body, class: 'form-control', rows: 15, placeholder: 'Content' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.number_field :topic_id, class: 'form-control', placeholder: 'Topic' %>
+  </div>
+
+  <div class="form-group">
+    <%= form.submit "Submit", class: 'btn btn-primary' %>
+  </div>
+<% end %>
+
+
+
+<!--
 <%= form_with(model: blog, local: true) do |form| %>
   <% if blog.errors.any? %>
     <div id="error_explanation">
@@ -30,3 +64,4 @@
     <%= form.submit "Submit", class: 'btn btn-primary' %>
   </div>
 <% end %>
+-->
