--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -2,7 +2,7 @@
 <%= form_with(model: blog, local: true) do |form| %>
   <% if blog.errors.any? %>
     <% blog.errors.full_messages.each do |error| %>
-      <%= js add_gritter(error, title: "B.J. Brooks Portfolio", sticky: false) %>
+      <%= alert_generator error %>
     <% end %>
   <% end %>
 
