--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,17 +4,7 @@
   <p><%= @blog.body %>
   </p>
 
-  <!-- Start of Comment Form -->
-  <% unless current_user.is_a? GuestUser %>
-    <%= form_for @comment, url: '#' do |f| %>
-      <div>
-        <%= f.label :content %>
-        <%= f.text_area :content, class: 'form-control' %>
-      </div>
-      <%= f.submit 'Post Comment', class: 'btn btn-primary' %>
-    <% end %>
-  <% end %>
-  <!-- End of Comment Form -->
+  <%= render 'comments/comment_form' %>
 
   <%= render @blog.comments %>
 </div>
