--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,7 +1,7 @@
 <!-- Start of Comment Form -->
 <% unless current_user.is_a? GuestUser %>
   <%= form_for @comment, url: '#' do |f| %>
-    <div>
+    <div class="form-group">
       <%= f.label :content %>
       <%= f.text_area :content, class: 'form-control' %>
     </div>
