--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -11,12 +11,25 @@
   </div>
 
   <div class="form-group">
-    <%= form.text_area :body, class: 'form-control', rows: 15, placeholder: 'Content' %>
+    <%= form.label :topic_id %>
+    <%= form.collection_select(:topic_id, Topic.all, :id, :title,
+                                {
+                                  selected: blog.topic.id,
+                                  include_blank: true
+                                },
+                                class: 'form-control'
+                              )
+    %>
   </div>
 
   <div class="form-group">
+    <%= form.text_area :body, class: 'form-control', rows: 15, placeholder: 'Content' %>
+  </div>
+<!--
+  <div class="form-group">
     <%= form.number_field :topic_id, class: 'form-control', placeholder: 'Topic' %>
   </div>
+-->
 
   <div class="form-group">
     <%= form.submit "Submit", class: 'btn btn-primary' %>
