--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,3 +1,22 @@
+<nav class="navbar navbar-expand-md navbar-light bg-light justify-content-center">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="container">
+    <%= link_to "B.J. Brooks", root_path, class: 'navbar-brand' %>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <%= nav_helper 'nav-link', 'li' %>  
+        <%= login_helper 'nav-link' %>  
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+<!--
 <div class="blog-masthead">
   <div class="container">
     <nav class="nav blog-nav">
@@ -6,3 +25,4 @@
     </nav>
   </div>
 </div>
+-->
