Styled about and contact pages with card styles

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,18 @@
-<h1>Pages#about</h1>
+<div class="app-card-container">
+  <div class="card">
+    <h1>Pages#about</h1>
 
-<hr>
+    <hr>
 
-<div class="row">
-  <div class="col-md-4">
-    <%= image_tag "my_photo.jpg", width: 300, alt: "Profile Image" %>
-  </div>
+    <div class="row">
+      <div class="col-md-4">
+        <%= image_tag "my_photo.jpg", width: 300, alt: "Profile Image", class: 'profile-image' %>
+      </div>
 
 
-  <div class="col-md-8">
-    <p>Find me in app/views/pages/about.html.erb</p>
+      <div class="col-md-8">
+        <p>Find me in app/views/pages/about.html.erb</p>
+      </div>
+    </div>
   </div>
 </div>
