--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,10 +1,14 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<div class="app-card-container">
+  <div class="card">
+    <h1>Pages#contact</h1>
+    <p>Find me in app/views/pages/contact.html.erb</p>
 
-<p><%= number_to_phone "4445557777" %></p>
+    <p><%= number_to_phone "4445557777" %></p>
 
-<p><%= number_to_currency "178" %></p>
+    <p><%= number_to_currency "178" %></p>
 
-<p><%= number_to_percentage "78.5" %></p>
+    <p><%= number_to_percentage "78.5" %></p>
 
-<p><%= number_with_delimiter "1789871348765" %></p>
+    <p><%= number_with_delimiter "1789871348765" %></p>
+  </div>
+</div>
