--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,9 +9,58 @@
         <%= image_tag "my_photo.jpg", width: 300, alt: "Profile Image", class: 'profile-image' %>
       </div>
 
-
       <div class="col-md-8">
         <p>Find me in app/views/pages/about.html.erb</p>
+
+        <p>
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#jobHistory"
+            aria-expanded="false"
+            aria-controler="jobHistory"
+          >
+            Job History
+          </button>
+
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#education"
+            aria-expanded="false"
+            aria-controler="education"
+          >
+            Education
+          </button>
+        </p>
+
+        <p>
+          <div class="collapse" id="jobHistory">
+            <div class="card card-block">
+              Job 1
+            </div>
+            <div class="card card-block">
+              Job 2
+            </div>
+            <div class="card card-block">
+              Job 3
+            </div>
+          </div>
+
+          <div class="collapse" id="education">
+            <div class="card card-block">
+              School 1
+            </div>
+            <div class="card card-block">
+              School 2
+            </div>
+            <div class="card card-block">
+              School 3
+            </div>
+          </div>
+        </p>
       </div>
     </div>
   </div>
