--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,14 +1,17 @@
 <div class="app-card-container">
   <div class="card">
-    <h1>Pages#contact</h1>
-    <p>Find me in app/views/pages/contact.html.erb</p>
+    <h1>Contact Me</h1>
 
-    <p><%= number_to_phone "4445557777" %></p>
+    <p>Phone: <%= number_to_phone "8177739049" %></p>
+    <p>Email: ben@brookswebpro.com</p>
+    <p>Facebook: https://www.facebook.com/brookswebpro</p>
+    <p>Twitter: https://twitter.com/brookswebpro</p>
 
-    <p><%= number_to_currency "178" %></p>
+<!--    <p><%= number_to_currency "178" %></p>
 
     <p><%= number_to_percentage "78.5" %></p>
 
     <p><%= number_with_delimiter "1789871348765" %></p>
+-->
   </div>
 </div>
