--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">Welcome to my Development Portfolio</h1>
+  <p class="lead">Hi! My name is Ben Brooks and I'm a developer. This webpage includes my apps, my certifications, and a blog page that has articles related to my Adventures in Professional Programming. Let me know if you have any comments, questions, or inquiries into programming or projects.</p>
   <p class="lead">
     <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
