--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -4,7 +4,7 @@
   </button>
 
   <div class="container">
-    <%= link_to "B.J. Brooks", root_path, class: 'navbar-brand' %>
+    <%= link_to "Ben Brooks", root_path, class: 'navbar-brand' %>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
