--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="col-sm-3 offset-sm-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
-    <h4>About</h4>
-    <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+    <h4>APP Blog</h4>
+    <p><em>Adventures in Professional Programming</em> This blog includes posts related to the lessons learned from programming from all its guts and glory.</p>
   </div>
 
     <%= source_helper ("alert alert-info blog-sidebar-source") %>
@@ -15,10 +15,10 @@
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
     <ol class="list-unstyled social-links">
-      <li><a href="#"><%= fa_icon "github" %></a></li>
-      <li><a href="#"><%= fa_icon "facebook" %></a></li>
-      <li><a href="#"><%= fa_icon "instagram" %></a></li>
-      <li><a href="#"><%= fa_icon "twitter" %></a></li>
+      <li><a href="https://github.com/rorbro"><%= fa_icon "github" %></a></li>
+      <li><a href="https://www.facebook.com/brookswebpro"><%= fa_icon "facebook" %></a></li>
+<!--      <li><a href="#"><%= fa_icon "instagram" %></a></li> -->
+      <li><a href="https://twitter.com/brookswebpro"><%= fa_icon "twitter" %></a></li>
     </ol>
   </div>
 </div><!-- /.blog-sidebar -->
