--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
             autoplay: true,
             loop: true,
             muted: true,
-            poster: 'desk2.jpg'
+            poster: 'home_bg.png'
             )
             %>
           
