Updated blog and portfolio masthead text and added Create New Item link for portfolio page

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,7 +1,10 @@
 <div class="album text-muted">
   <div class="container">
+    <span style="padding-left: 10px;"><%= link_to 'Create a New Portfolio Item', new_portfolio_path if logged_in?(:site_admin) %>
+    </span>
     <%= source_helper ("alert alert-warning") %>
     <div class="row <%= "sortable" if logged_in?(:site_admin) %>">
+
       <%= render partial: 'portfolio_item', collection: @portfolio_items %>
     </div>
   </div>
