--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -1,7 +1,7 @@
 <div class="blog-header">
   <div class="container">
-    <h1 class="blog-title">The Blog</h1>
-    <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+    <h1 class="blog-title">The APP Blog</h1>
+    <p class="lead blog-description">This is a collection of blogs that details my Adventures in Professional Programming.</p>
     <span><%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
     </span>
     <span>
